# ck3-savescummer

./: Cargo.toml
src/: context.rs  file_op.rs  main.rs  path.rs  save_file.rs  save_file_event_handler.rs  save_file_watcher.rs  save_storage.rs  save_version.rs  state.rs  storage.rs  time_budget.rs  watcher_error.rs
src/ui/: mod.rs  popup.rs  style.rs  table.rs
