[package]
name = "ck3-savescummer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
crossterm = "0.27"
directories = "5.0"
libc = "0.2"
log = "0.4"
notify = "6.1"
ratatui = "0.27.0-alpha.5"
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0", default-features = false, features = ["use-std"] }
